fixed some layout issues, now is the dropdown menu working great

--- a/src/components/chat/chat.css
+++ b/src/components/chat/chat.css
@@ -46,10 +46,17 @@
     .icons {
       display: flex;
       gap: 20px;
+      cursor: pointer;
+      border-radius: 50%;
 
       img {
-        width: 20px;
-        height: 20px;
+        padding: 10px;
+        width: 50px;
+        height: 50px;
+      }
+
+      &:hover {
+        background-color: rgba(17, 25, 40, 0.3);
       }
     }
   }
